--- a/css/styles.css
+++ b/css/styles.css
@@ -151,12 +151,21 @@ body {
 }
 
 /* Наша команда */
+.team {
+  background-color: var(--section-font-color);
+}
+
+.team-item {
+  background-color: var(--primary-font-color);
+}
+
 .team-title {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  
 }
 
 .team-subtitle {
