--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ body {
 
 /* Фільтри */
 .filter-btn {
-  font-family: 'Roboto';
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
