--- a/css/styles.css
+++ b/css/styles.css
@@ -51,9 +51,9 @@ body {
 }
 
 .logo {
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
-  line-height: 1,19;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--logo-dark-color);
 }
@@ -62,7 +62,7 @@ body {
   color: var(--logo-accent-color);
 }
 
-.header-list {
+.header-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -119,6 +119,8 @@ body {
   color: var(--white-text-color);
   background-color: var(--accent-color);
   cursor: pointer;
+  border-color: transparent;
+  border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -191,6 +193,8 @@ body {
   letter-spacing: 0.03em;
   background-color: var(--button-bcg-color);
   cursor: pointer;
+  border-color: transparent;
+  border-radius: 4px;
 }
 
 .filter-btn:hover,
@@ -215,11 +219,6 @@ body {
   color: var(--primary-text-color);
 }
 
-.project-link:hover,
-.project-link:focus {
-  background-color: var(--accent-color);
-}
-
 /* Підвал */
 .footer {
   background-color: var(--secondary-font-color);
@@ -228,7 +227,7 @@ body {
 .logo-footer {
   font-family: 'Raleway';
   font-size: 26px;
-  line-height: 1,19;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--white-text-color);
 }
